[gd_scene load_steps=5 format=3 uid="uid://dqg0x0wqktm85"]

[ext_resource type="Script" path="res://gong.gd" id="1_11me6"]
[ext_resource type="PackedScene" uid="uid://bcewfbp655ao0" path="res://models/gong.glb" id="1_nd6la"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_snduv"]
data = PackedVector3Array(1.4999, -0.25, 0.25, 1.4999, 3.2499, -0.25, 1.4999, 3.2499, 0.25, 1.4999, -0.25, 0.25, 1.4999, -0.25, -0.25, 1.4999, 3.2499, -0.25, 1.4999, -0.25, -0.25, 2, 3.2499, -0.25, 1.4999, 3.2499, -0.25, 1.4999, -0.25, -0.25, 2, -0.25, -0.25, 2, 3.2499, -0.25, 2, -0.25, -0.25, 2, 3.2499, 0.25, 2, 3.2499, -0.25, 2, -0.25, -0.25, 2, -0.25, 0.25, 2, 3.2499, 0.25, 1.4999, -0.25, -0.25, 2, -0.25, 0.25, 2, -0.25, -0.25, 1.4999, -0.25, -0.25, 1.4999, -0.25, 0.25, 2, -0.25, 0.25, 2, 3.2499, -0.25, 1.4999, 3.2499, 0.25, 1.4999, 3.2499, -0.25, 2, 3.2499, -0.25, 2, 3.2499, 0.25, 1.4999, 3.2499, 0.25, 2, -0.25, 0.25, 1.4999, 3.2499, 0.25, 2, 3.2499, 0.25, 2, -0.25, 0.25, 1.4999, -0.25, 0.25, 1.4999, 3.2499, 0.25, 0, 3.2499, -0.375, 2.25, 3.75, -0.375, 0, 3.75, -0.375, 0, 3.2499, -0.375, 2.25, 3.2499, -0.375, 2.25, 3.75, -0.375, 2.25, 3.2499, -0.375, 2.25, 3.75, 0.375, 2.25, 3.75, -0.375, 2.25, 3.2499, -0.375, 2.25, 3.2499, 0.375, 2.25, 3.75, 0.375, 2.25, 3.2499, 0.375, 0, 3.75, 0.375, 2.25, 3.75, 0.375, 2.25, 3.2499, 0.375, 0, 3.2499, 0.375, 0, 3.75, 0.375, 0, 3.2499, 0.375, 0, 3.75, -0.375, 0, 3.75, 0.375, 0, 3.2499, 0.375, 0, 3.2499, -0.375, 0, 3.75, -0.375, 0, 3.2499, -0.375, 2.25, 3.2499, 0.375, 2.25, 3.2499, -0.375, 0, 3.2499, -0.375, 0, 3.2499, 0.375, 2.25, 3.2499, 0.375, 2.25, 3.75, -0.375, 0, 3.75, 0.375, 0, 3.75, -0.375, 2.25, 3.75, -0.375, 2.25, 3.75, 0.375, 0, 3.75, 0.375, 2.5475, 3.8499, -0.45, 2.75, 4.55, -0.45, 2.5475, 4.4124, -0.45, 2.5475, 3.8499, -0.45, 2.75, 4.025, -0.45, 2.75, 4.55, -0.45, 2.75, 4.025, -0.45, 2.75, 4.55, 0.45, 2.75, 4.55, -0.45, 2.75, 4.025, -0.45, 2.75, 4.025, 0.45, 2.75, 4.55, 0.45, 2.145, 3.6999, 0.45, 0, 4.2999, 0.45, 2.145, 4.2999, 0.45, 2.145, 3.6999, 0.45, 0, 3.6999, 0.45, 0, 4.2999, 0.45, 0, 3.6999, 0.45, 0, 4.2999, -0.45, 0, 4.2999, 0.45, 0, 3.6999, 0.45, 0, 3.6999, -0.45, 0, 4.2999, -0.45, 2.5475, 3.8499, -0.45, 2.75, 4.025, 0.45, 2.75, 4.025, -0.45, 2.5475, 3.8499, -0.45, 2.5475, 3.8499, 0.45, 2.75, 4.025, 0.45, 2.145, 4.2999, -0.45, 0, 4.2999, 0.45, 0, 4.2999, -0.45, 2.145, 4.2999, -0.45, 2.145, 4.2999, 0.45, 0, 4.2999, 0.45, 0, 2.3, -0.0675, 1.75, 2.65, -0.0675, 0, 2.65, -0.0675, 0, 2.3, -0.0675, 1.75, 2.3, -0.0675, 1.75, 2.65, -0.0675, 1.75, 2.3, -0.0675, 1.75, 2.65, 0.0675, 1.75, 2.65, -0.0675, 1.75, 2.3, -0.0675, 1.75, 2.3, 0.0675, 1.75, 2.65, 0.0675, 1.75, 2.3, 0.0675, 0, 2.65, 0.0675, 1.75, 2.65, 0.0675, 1.75, 2.3, 0.0675, 0, 2.3, 0.0675, 0, 2.65, 0.0675, 0, 2.3, 0.0675, 0, 2.65, -0.0675, 0, 2.65, 0.0675, 0, 2.3, 0.0675, 0, 2.3, -0.0675, 0, 2.65, -0.0675, 0, 2.3, -0.0675, 1.75, 2.3, 0.0675, 1.75, 2.3, -0.0675, 0, 2.3, -0.0675, 0, 2.3, 0.0675, 1.75, 2.3, 0.0675, 1.75, 2.65, -0.0675, 0, 2.65, 0.0675, 0, 2.65, -0.0675, 1.75, 2.65, -0.0675, 1.75, 2.65, 0.0675, 0, 2.65, 0.0675, 2.5475, 4.4124, -0.45, 2.37, 4.35, 0.45, 2.37, 4.35, -0.45, 2.5475, 4.4124, -0.45, 2.5475, 4.4124, 0.45, 2.37, 4.35, 0.45, 2.37, 4.35, -0.45, 2.145, 4.2999, 0.45, 2.145, 4.2999, -0.45, 2.37, 4.35, -0.45, 2.37, 4.35, 0.45, 2.145, 4.2999, 0.45, 0, 3.6999, -0.45, 2.145, 3.6999, 0.45, 2.145, 3.6999, -0.45, 0, 3.6999, -0.45, 0, 3.6999, 0.45, 2.145, 3.6999, 0.45, 2.145, 3.6999, -0.45, 2.37, 3.75, 0.45, 2.37, 3.75, -0.45, 2.145, 3.6999, -0.45, 2.145, 3.6999, 0.45, 2.37, 3.75, 0.45, 2.5475, 3.8499, 0.45, 2.37, 4.35, 0.45, 2.5475, 4.4124, 0.45, 2.5475, 3.8499, 0.45, 2.37, 3.75, 0.45, 2.37, 4.35, 0.45, 2.37, 3.75, 0.45, 2.145, 4.2999, 0.45, 2.37, 4.35, 0.45, 2.37, 3.75, 0.45, 2.145, 3.6999, 0.45, 2.145, 4.2999, 0.45, 0, 3.6999, -0.45, 2.145, 4.2999, -0.45, 0, 4.2999, -0.45, 0, 3.6999, -0.45, 2.145, 3.6999, -0.45, 2.145, 4.2999, -0.45, 2.145, 3.6999, -0.45, 2.37, 4.35, -0.45, 2.145, 4.2999, -0.45, 2.145, 3.6999, -0.45, 2.37, 3.75, -0.45, 2.37, 4.35, -0.45, 2.75, 4.025, 0.45, 2.5475, 4.4124, 0.45, 2.75, 4.55, 0.45, 2.75, 4.025, 0.45, 2.5475, 3.8499, 0.45, 2.5475, 4.4124, 0.45, 2.75, 4.55, -0.45, 2.5475, 4.4124, 0.45, 2.5475, 4.4124, -0.45, 2.75, 4.55, -0.45, 2.75, 4.55, 0.45, 2.5475, 4.4124, 0.45, 2.37, 3.75, -0.45, 2.5475, 3.8499, 0.45, 2.5475, 3.8499, -0.45, 2.37, 3.75, -0.45, 2.37, 3.75, 0.45, 2.5475, 3.8499, 0.45, 2.37, 3.75, -0.45, 2.5475, 4.4124, -0.45, 2.37, 4.35, -0.45, 2.37, 3.75, -0.45, 2.5475, 3.8499, -0.45, 2.5475, 4.4124, -0.45, 1.75, -0.15, -0.15, 0, -0.15, 0.15, 0, -0.15, -0.15, 1.75, -0.15, -0.15, 1.75, -0.15, 0.15, 0, -0.15, 0.15, 1.75, -0.25, -0.15, 1.75, -0.15, 0.15, 1.75, -0.15, -0.15, 1.75, -0.25, -0.15, 1.75, -0.25, 0.15, 1.75, -0.15, 0.15, 0, -0.25, -0.15, 1.75, -0.15, -0.15, 0, -0.15, -0.15, 0, -0.25, -0.15, 1.75, -0.25, -0.15, 1.75, -0.15, -0.15, 0, -0.25, -0.15, 1.75, -0.25, 0.15, 1.75, -0.25, -0.15, 0, -0.25, -0.15, 0, -0.25, 0.15, 1.75, -0.25, 0.15, 1.75, -0.25, 0.15, 0, -0.15, 0.15, 1.75, -0.15, 0.15, 1.75, -0.25, 0.15, 0, -0.25, 0.15, 0, -0.15, 0.15, 0, -0.25, 0.15, 0, -0.15, -0.15, 0, -0.15, 0.15, 0, -0.25, 0.15, 0, -0.25, -0.15, 0, -0.15, -0.15, 1.525, -0.1625, 0.52, 1.525, -0.075, -0.52, 1.525, -0.075, 0.52, 1.525, -0.1625, 0.52, 1.525, -0.1625, -0.52, 1.525, -0.075, -0.52, 1.525, -0.1625, -0.52, 1.975, -0.075, -0.52, 1.525, -0.075, -0.52, 1.525, -0.1625, -0.52, 1.975, -0.1625, -0.52, 1.975, -0.075, -0.52, 1.975, -0.1625, -0.52, 1.975, -0.075, 0.52, 1.975, -0.075, -0.52, 1.975, -0.1625, -0.52, 1.975, -0.1625, 0.52, 1.975, -0.075, 0.52, 1.975, -0.1625, 0.52, 1.525, -0.075, 0.52, 1.975, -0.075, 0.52, 1.975, -0.1625, 0.52, 1.525, -0.1625, 0.52, 1.525, -0.075, 0.52, 1.525, -0.25, -0.52, 1.975, -0.25, 0.52, 1.975, -0.25, -0.52, 1.525, -0.25, -0.52, 1.525, -0.25, 0.52, 1.975, -0.25, 0.52, 1.975, -0.075, -0.52, 1.525, -0.075, 0.52, 1.525, -0.075, -0.52, 1.975, -0.075, -0.52, 1.975, -0.075, 0.52, 1.525, -0.075, 0.52, 1.975, -0.25, 0.52, 1.975, -0.1625, 0.62, 1.975, -0.1625, 0.52, 1.975, -0.25, 0.52, 1.975, -0.25, 0.62, 1.975, -0.1625, 0.62, 1.975, -0.25, -0.52, 1.975, -0.1625, 0.52, 1.975, -0.1625, -0.52, 1.975, -0.25, -0.52, 1.975, -0.25, 0.52, 1.975, -0.1625, 0.52, 1.525, -0.1625, -0.52, 1.975, -0.1625, -0.62, 1.975, -0.1625, -0.52, 1.525, -0.1625, -0.52, 1.525, -0.1625, -0.62, 1.975, -0.1625, -0.62, 1.525, -0.25, 0.52, 1.525, -0.1625, -0.52, 1.525, -0.1625, 0.52, 1.525, -0.25, 0.52, 1.525, -0.25, -0.52, 1.525, -0.1625, -0.52, 1.975, -0.25, 0.62, 1.525, -0.1625, 0.62, 1.975, -0.1625, 0.62, 1.975, -0.25, 0.62, 1.525, -0.25, 0.62, 1.525, -0.1625, 0.62, 1.975, -0.1625, 0.52, 1.525, -0.1625, 0.62, 1.525, -0.1625, 0.52, 1.975, -0.1625, 0.52, 1.975, -0.1625, 0.62, 1.525, -0.1625, 0.62, 1.525, -0.1625, 0.52, 1.525, -0.25, 0.62, 1.525, -0.25, 0.52, 1.525, -0.1625, 0.52, 1.525, -0.1625, 0.62, 1.525, -0.25, 0.62, 1.525, -0.25, 0.52, 1.975, -0.25, 0.62, 1.975, -0.25, 0.52, 1.525, -0.25, 0.52, 1.525, -0.25, 0.62, 1.975, -0.25, 0.62, 1.525, -0.25, -0.62, 1.975, -0.1625, -0.62, 1.525, -0.1625, -0.62, 1.525, -0.25, -0.62, 1.975, -0.25, -0.62, 1.975, -0.1625, -0.62, 1.525, -0.25, -0.52, 1.525, -0.1625, -0.62, 1.525, -0.1625, -0.52, 1.525, -0.25, -0.52, 1.525, -0.25, -0.62, 1.525, -0.1625, -0.62, 1.975, -0.1625, -0.52, 1.975, -0.25, -0.62, 1.975, -0.25, -0.52, 1.975, -0.1625, -0.52, 1.975, -0.1625, -0.62, 1.975, -0.25, -0.62, 1.975, -0.25, -0.52, 1.525, -0.25, -0.62, 1.525, -0.25, -0.52, 1.975, -0.25, -0.52, 1.975, -0.25, -0.62, 1.525, -0.25, -0.62, -1.5, -0.25, 0.25, -1.5, 3.2499, -0.25, -1.5, -0.25, -0.25, -1.5, -0.25, 0.25, -1.5, 3.2499, 0.25, -1.5, 3.2499, -0.25, -1.5, -0.25, -0.25, -2, 3.2499, -0.25, -2, -0.25, -0.25, -1.5, -0.25, -0.25, -1.5, 3.2499, -0.25, -2, 3.2499, -0.25, -2, -0.25, -0.25, -2, 3.2499, 0.25, -2, -0.25, 0.25, -2, -0.25, -0.25, -2, 3.2499, -0.25, -2, 3.2499, 0.25, -1.5, -0.25, -0.25, -2, -0.25, 0.25, -1.5, -0.25, 0.25, -1.5, -0.25, -0.25, -2, -0.25, -0.25, -2, -0.25, 0.25, -2, 3.2499, -0.25, -1.5, 3.2499, 0.25, -2, 3.2499, 0.25, -2, 3.2499, -0.25, -1.5, 3.2499, -0.25, -1.5, 3.2499, 0.25, -2, -0.25, 0.25, -1.5, 3.2499, 0.25, -1.5, -0.25, 0.25, -2, -0.25, 0.25, -2, 3.2499, 0.25, -1.5, 3.2499, 0.25, 0, 3.2499, -0.375, -2.2501, 3.75, -0.375, -2.2501, 3.2499, -0.375, 0, 3.2499, -0.375, 0, 3.75, -0.375, -2.2501, 3.75, -0.375, -2.2501, 3.2499, -0.375, -2.2501, 3.75, 0.375, -2.2501, 3.2499, 0.375, -2.2501, 3.2499, -0.375, -2.2501, 3.75, -0.375, -2.2501, 3.75, 0.375, -2.2501, 3.2499, 0.375, 0, 3.75, 0.375, 0, 3.2499, 0.375, -2.2501, 3.2499, 0.375, -2.2501, 3.75, 0.375, 0, 3.75, 0.375, 0, 3.2499, -0.375, -2.2501, 3.2499, 0.375, 0, 3.2499, 0.375, 0, 3.2499, -0.375, -2.2501, 3.2499, -0.375, -2.2501, 3.2499, 0.375, -2.2501, 3.75, -0.375, 0, 3.75, 0.375, -2.2501, 3.75, 0.375, -2.2501, 3.75, -0.375, 0, 3.75, -0.375, 0, 3.75, 0.375, -2.5476, 3.8499, -0.45, -2.75, 4.55, -0.45, -2.75, 4.025, -0.45, -2.5476, 3.8499, -0.45, -2.5476, 4.4124, -0.45, -2.75, 4.55, -0.45, -2.75, 4.025, -0.45, -2.75, 4.55, 0.45, -2.75, 4.025, 0.45, -2.75, 4.025, -0.45, -2.75, 4.55, -0.45, -2.75, 4.55, 0.45, -2.1451, 3.6999, 0.45, 0, 4.2999, 0.45, 0, 3.6999, 0.45, -2.1451, 3.6999, 0.45, -2.1451, 4.2999, 0.45, 0, 4.2999, 0.45, -2.5476, 3.8499, -0.45, -2.75, 4.025, 0.45, -2.5476, 3.8499, 0.45, -2.5476, 3.8499, -0.45, -2.75, 4.025, -0.45, -2.75, 4.025, 0.45, -2.1451, 4.2999, -0.45, 0, 4.2999, 0.45, -2.1451, 4.2999, 0.45, -2.1451, 4.2999, -0.45, 0, 4.2999, -0.45, 0, 4.2999, 0.45, 0, 2.3, -0.0675, -1.75, 2.65, -0.0675, -1.75, 2.3, -0.0675, 0, 2.3, -0.0675, 0, 2.65, -0.0675, -1.75, 2.65, -0.0675, -1.75, 2.3, -0.0675, -1.75, 2.65, 0.0675, -1.75, 2.3, 0.0675, -1.75, 2.3, -0.0675, -1.75, 2.65, -0.0675, -1.75, 2.65, 0.0675, -1.75, 2.3, 0.0675, 0, 2.65, 0.0675, 0, 2.3, 0.0675, -1.75, 2.3, 0.0675, -1.75, 2.65, 0.0675, 0, 2.65, 0.0675, 0, 2.3, -0.0675, -1.75, 2.3, 0.0675, 0, 2.3, 0.0675, 0, 2.3, -0.0675, -1.75, 2.3, -0.0675, -1.75, 2.3, 0.0675, -1.75, 2.65, -0.0675, 0, 2.65, 0.0675, -1.75, 2.65, 0.0675, -1.75, 2.65, -0.0675, 0, 2.65, -0.0675, 0, 2.65, 0.0675, -2.5476, 4.4124, -0.45, -2.3701, 4.35, 0.45, -2.5476, 4.4124, 0.45, -2.5476, 4.4124, -0.45, -2.3701, 4.35, -0.45, -2.3701, 4.35, 0.45, -2.3701, 4.35, -0.45, -2.1451, 4.2999, 0.45, -2.3701, 4.35, 0.45, -2.3701, 4.35, -0.45, -2.1451, 4.2999, -0.45, -2.1451, 4.2999, 0.45, 0, 3.6999, -0.45, -2.1451, 3.6999, 0.45, 0, 3.6999, 0.45, 0, 3.6999, -0.45, -2.1451, 3.6999, -0.45, -2.1451, 3.6999, 0.45, -2.1451, 3.6999, -0.45, -2.3701, 3.75, 0.45, -2.1451, 3.6999, 0.45, -2.1451, 3.6999, -0.45, -2.3701, 3.75, -0.45, -2.3701, 3.75, 0.45, -2.5476, 3.8499, 0.45, -2.3701, 4.35, 0.45, -2.3701, 3.75, 0.45, -2.5476, 3.8499, 0.45, -2.5476, 4.4124, 0.45, -2.3701, 4.35, 0.45, -2.3701, 3.75, 0.45, -2.1451, 4.2999, 0.45, -2.1451, 3.6999, 0.45, -2.3701, 3.75, 0.45, -2.3701, 4.35, 0.45, -2.1451, 4.2999, 0.45, 0, 3.6999, -0.45, -2.1451, 4.2999, -0.45, -2.1451, 3.6999, -0.45, 0, 3.6999, -0.45, 0, 4.2999, -0.45, -2.1451, 4.2999, -0.45, -2.1451, 3.6999, -0.45, -2.3701, 4.35, -0.45, -2.3701, 3.75, -0.45, -2.1451, 3.6999, -0.45, -2.1451, 4.2999, -0.45, -2.3701, 4.35, -0.45, -2.75, 4.025, 0.45, -2.5476, 4.4124, 0.45, -2.5476, 3.8499, 0.45, -2.75, 4.025, 0.45, -2.75, 4.55, 0.45, -2.5476, 4.4124, 0.45, -2.75, 4.55, -0.45, -2.5476, 4.4124, 0.45, -2.75, 4.55, 0.45, -2.75, 4.55, -0.45, -2.5476, 4.4124, -0.45, -2.5476, 4.4124, 0.45, -2.3701, 3.75, -0.45, -2.5476, 3.8499, 0.45, -2.3701, 3.75, 0.45, -2.3701, 3.75, -0.45, -2.5476, 3.8499, -0.45, -2.5476, 3.8499, 0.45, -2.3701, 3.75, -0.45, -2.5476, 4.4124, -0.45, -2.5476, 3.8499, -0.45, -2.3701, 3.75, -0.45, -2.3701, 4.35, -0.45, -2.5476, 4.4124, -0.45, -1.75, -0.15, -0.15, 0, -0.15, 0.15, -1.75, -0.15, 0.15, -1.75, -0.15, -0.15, 0, -0.15, -0.15, 0, -0.15, 0.15, -1.75, -0.25, -0.15, -1.75, -0.15, 0.15, -1.75, -0.25, 0.15, -1.75, -0.25, -0.15, -1.75, -0.15, -0.15, -1.75, -0.15, 0.15, 0, -0.25, -0.15, -1.75, -0.15, -0.15, -1.75, -0.25, -0.15, 0, -0.25, -0.15, 0, -0.15, -0.15, -1.75, -0.15, -0.15, 0, -0.25, -0.15, -1.75, -0.25, 0.15, 0, -0.25, 0.15, 0, -0.25, -0.15, -1.75, -0.25, -0.15, -1.75, -0.25, 0.15, -1.75, -0.25, 0.15, 0, -0.15, 0.15, 0, -0.25, 0.15, -1.75, -0.25, 0.15, -1.75, -0.15, 0.15, 0, -0.15, 0.15, -1.525, -0.1625, 0.52, -1.525, -0.075, -0.52, -1.525, -0.1625, -0.52, -1.525, -0.1625, 0.52, -1.525, -0.075, 0.52, -1.525, -0.075, -0.52, -1.525, -0.1625, -0.52, -1.975, -0.075, -0.52, -1.975, -0.1625, -0.52, -1.525, -0.1625, -0.52, -1.525, -0.075, -0.52, -1.975, -0.075, -0.52, -1.975, -0.1625, -0.52, -1.975, -0.075, 0.52, -1.975, -0.1625, 0.52, -1.975, -0.1625, -0.52, -1.975, -0.075, -0.52, -1.975, -0.075, 0.52, -1.975, -0.1625, 0.52, -1.525, -0.075, 0.52, -1.525, -0.1625, 0.52, -1.975, -0.1625, 0.52, -1.975, -0.075, 0.52, -1.525, -0.075, 0.52, -1.525, -0.25, -0.52, -1.975, -0.25, 0.52, -1.525, -0.25, 0.52, -1.525, -0.25, -0.52, -1.975, -0.25, -0.52, -1.975, -0.25, 0.52, -1.975, -0.075, -0.52, -1.525, -0.075, 0.52, -1.975, -0.075, 0.52, -1.975, -0.075, -0.52, -1.525, -0.075, -0.52, -1.525, -0.075, 0.52, -1.975, -0.25, 0.52, -1.975, -0.1625, 0.62, -1.975, -0.25, 0.62, -1.975, -0.25, 0.52, -1.975, -0.1625, 0.52, -1.975, -0.1625, 0.62, -1.975, -0.25, -0.52, -1.975, -0.1625, 0.52, -1.975, -0.25, 0.52, -1.975, -0.25, -0.52, -1.975, -0.1625, -0.52, -1.975, -0.1625, 0.52, -1.525, -0.1625, -0.52, -1.975, -0.1625, -0.62, -1.525, -0.1625, -0.62, -1.525, -0.1625, -0.52, -1.975, -0.1625, -0.52, -1.975, -0.1625, -0.62, -1.525, -0.25, 0.52, -1.525, -0.1625, -0.52, -1.525, -0.25, -0.52, -1.525, -0.25, 0.52, -1.525, -0.1625, 0.52, -1.525, -0.1625, -0.52, -1.975, -0.25, 0.62, -1.525, -0.1625, 0.62, -1.525, -0.25, 0.62, -1.975, -0.25, 0.62, -1.975, -0.1625, 0.62, -1.525, -0.1625, 0.62, -1.975, -0.1625, 0.52, -1.525, -0.1625, 0.62, -1.975, -0.1625, 0.62, -1.975, -0.1625, 0.52, -1.525, -0.1625, 0.52, -1.525, -0.1625, 0.62, -1.525, -0.1625, 0.52, -1.525, -0.25, 0.62, -1.525, -0.1625, 0.62, -1.525, -0.1625, 0.52, -1.525, -0.25, 0.52, -1.525, -0.25, 0.62, -1.525, -0.25, 0.52, -1.975, -0.25, 0.62, -1.525, -0.25, 0.62, -1.525, -0.25, 0.52, -1.975, -0.25, 0.52, -1.975, -0.25, 0.62, -1.525, -0.25, -0.62, -1.975, -0.1625, -0.62, -1.975, -0.25, -0.62, -1.525, -0.25, -0.62, -1.525, -0.1625, -0.62, -1.975, -0.1625, -0.62, -1.525, -0.25, -0.52, -1.525, -0.1625, -0.62, -1.525, -0.25, -0.62, -1.525, -0.25, -0.52, -1.525, -0.1625, -0.52, -1.525, -0.1625, -0.62, -1.975, -0.1625, -0.52, -1.975, -0.25, -0.62, -1.975, -0.1625, -0.62, -1.975, -0.1625, -0.52, -1.975, -0.25, -0.52, -1.975, -0.25, -0.62, -1.975, -0.25, -0.52, -1.525, -0.25, -0.62, -1.975, -0.25, -0.62, -1.975, -0.25, -0.52, -1.525, -0.25, -0.52, -1.525, -0.25, -0.62, 0.4625, 1.25, 0.01, 0.4625, 2.5, -0.01, 0.4625, 2.5, 0.01, 0.4625, 1.25, 0.01, 0.4625, 1.25, -0.01, 0.4625, 2.5, -0.01, 0.4625, 1.25, -0.01, 0.4875, 2.5, -0.01, 0.4625, 2.5, -0.01, 0.4625, 1.25, -0.01, 0.4875, 1.25, -0.01, 0.4875, 2.5, -0.01, 0.4875, 1.25, -0.01, 0.4875, 2.5, 0.01, 0.4875, 2.5, -0.01, 0.4875, 1.25, -0.01, 0.4875, 1.25, 0.01, 0.4875, 2.5, 0.01, 0.4875, 1.25, 0.01, 0.4625, 2.5, 0.01, 0.4875, 2.5, 0.01, 0.4875, 1.25, 0.01, 0.4625, 1.25, 0.01, 0.4625, 2.5, 0.01, 0.4875, 2.5, -0.01, 0.4625, 2.5, 0.01, 0.4625, 2.5, -0.01, 0.4875, 2.5, -0.01, 0.4875, 2.5, 0.01, 0.4625, 2.5, 0.01, -0.4625, 1.25, 0.01, -0.4625, 2.5, -0.01, -0.4625, 1.25, -0.01, -0.4625, 1.25, 0.01, -0.4625, 2.5, 0.01, -0.4625, 2.5, -0.01, -0.4625, 1.25, -0.01, -0.4875, 2.5, -0.01, -0.4875, 1.25, -0.01, -0.4625, 1.25, -0.01, -0.4625, 2.5, -0.01, -0.4875, 2.5, -0.01, -0.4875, 1.25, -0.01, -0.4875, 2.5, 0.01, -0.4875, 1.25, 0.01, -0.4875, 1.25, -0.01, -0.4875, 2.5, -0.01, -0.4875, 2.5, 0.01, -0.4875, 1.25, 0.01, -0.4625, 2.5, 0.01, -0.4625, 1.25, 0.01, -0.4875, 1.25, 0.01, -0.4875, 2.5, 0.01, -0.4625, 2.5, 0.01, -0.4875, 2.5, -0.01, -0.4625, 2.5, 0.01, -0.4875, 2.5, 0.01, -0.4875, 2.5, -0.01, -0.4625, 2.5, -0.01, -0.4625, 2.5, 0.01, 0.4625, 1.25, -0.01, 0.4875, 1.25, 0.01, 0.4875, 1.25, -0.01, 0.4625, 1.25, -0.01, 0.4625, 1.25, 0.01, 0.4875, 1.25, 0.01, 0, 1.6806, -0.0327, 0.2605, 1.6288, 0.0327, 0, 1.6806, 0.0327, 0, 1.6806, -0.0327, 0.2605, 1.6288, -0.0327, 0.2605, 1.6288, 0.0327, 0.2605, 1.6288, -0.0327, 0.4813, 1.4813, 0.0327, 0.2605, 1.6288, 0.0327, 0.2605, 1.6288, -0.0327, 0.4813, 1.4813, -0.0327, 0.4813, 1.4813, 0.0327, 0.4813, 1.4813, -0.0327, 0.6288, 1.2605, 0.0327, 0.4813, 1.4813, 0.0327, 0.4813, 1.4813, -0.0327, 0.6288, 1.2605, -0.0327, 0.6288, 1.2605, 0.0327, 0.6288, 1.2605, -0.0327, 0.6806, 1, 0.0327, 0.6288, 1.2605, 0.0327, 0.6288, 1.2605, -0.0327, 0.6806, 1, -0.0327, 0.6806, 1, 0.0327, 0.6806, 1, -0.0327, 0.6288, 0.7395, 0.0327, 0.6806, 1, 0.0327, 0.6806, 1, -0.0327, 0.6288, 0.7395, -0.0327, 0.6288, 0.7395, 0.0327, 0.6288, 0.7395, -0.0327, 0.4813, 0.5187, 0.0327, 0.6288, 0.7395, 0.0327, 0.6288, 0.7395, -0.0327, 0.4813, 0.5187, -0.0327, 0.4813, 0.5187, 0.0327, 0.4813, 0.5187, -0.0327, 0.2605, 0.3712, 0.0327, 0.4813, 0.5187, 0.0327, 0.4813, 0.5187, -0.0327, 0.2605, 0.3712, -0.0327, 0.2605, 0.3712, 0.0327, 0.2605, 0.3712, -0.0327, 0, 0.3194, 0.0327, 0.2605, 0.3712, 0.0327, 0.2605, 0.3712, -0.0327, 0, 0.3194, -0.0327, 0, 0.3194, 0.0327, 0, 0.3194, -0.0327, -0.2605, 0.3712, 0.0327, 0, 0.3194, 0.0327, 0, 0.3194, -0.0327, -0.2605, 0.3712, -0.0327, -0.2605, 0.3712, 0.0327, -0.2605, 0.3712, -0.0327, -0.4813, 0.5187, 0.0327, -0.2605, 0.3712, 0.0327, -0.2605, 0.3712, -0.0327, -0.4813, 0.5187, -0.0327, -0.4813, 0.5187, 0.0327, -0.4813, 0.5187, -0.0327, -0.6288, 0.7395, 0.0327, -0.4813, 0.5187, 0.0327, -0.4813, 0.5187, -0.0327, -0.6288, 0.7395, -0.0327, -0.6288, 0.7395, 0.0327, -0.6288, 0.7395, -0.0327, -0.6806, 1, 0.0327, -0.6288, 0.7395, 0.0327, -0.6288, 0.7395, -0.0327, -0.6806, 1, -0.0327, -0.6806, 1, 0.0327, -0.6806, 1, -0.0327, -0.6288, 1.2605, 0.0327, -0.6806, 1, 0.0327, -0.6806, 1, -0.0327, -0.6288, 1.2605, -0.0327, -0.6288, 1.2605, 0.0327, -0.6288, 1.2605, -0.0327, -0.4813, 1.4813, 0.0327, -0.6288, 1.2605, 0.0327, -0.6288, 1.2605, -0.0327, -0.4813, 1.4813, -0.0327, -0.4813, 1.4813, 0.0327, 0.4813, 1.4813, 0.0327, 0, 1.6806, 0.0327, 0.2605, 1.6288, 0.0327, 0, 1.6806, 0.0327, -0.4813, 1.4813, 0.0327, -0.2605, 1.6288, 0.0327, -0.4813, 1.4813, 0.0327, -0.6806, 1, 0.0327, -0.6288, 1.2605, 0.0327, -0.6806, 1, 0.0327, -0.4813, 0.5187, 0.0327, -0.6288, 0.7395, 0.0327, -0.4813, 0.5187, 0.0327, 0, 0.3194, 0.0327, -0.2605, 0.3712, 0.0327, 0, 0.3194, 0.0327, 0.4813, 0.5187, 0.0327, 0.2605, 0.3712, 0.0327, 0.4813, 0.5187, 0.0327, 0.6806, 1, 0.0327, 0.6288, 0.7395, 0.0327, 0.6806, 1, 0.0327, 0.4813, 1.4813, 0.0327, 0.6288, 1.2605, 0.0327, 0.4813, 1.4813, 0.0327, -0.4813, 1.4813, 0.0327, 0, 1.6806, 0.0327, -0.4813, 1.4813, 0.0327, -0.4813, 0.5187, 0.0327, -0.6806, 1, 0.0327, -0.4813, 0.5187, 0.0327, 0.4813, 0.5187, 0.0327, 0, 0.3194, 0.0327, 0.4813, 0.5187, 0.0327, 0.4813, 1.4813, 0.0327, 0.6806, 1, 0.0327, 0.4813, 1.4813, 0.0327, -0.4813, 0.5187, 0.0327, -0.4813, 1.4813, 0.0327, -0.4813, 0.5187, 0.0327, 0.4813, 1.4813, 0.0327, 0.4813, 0.5187, 0.0327, -0.4813, 1.4813, -0.0327, -0.2605, 1.6288, 0.0327, -0.4813, 1.4813, 0.0327, -0.4813, 1.4813, -0.0327, -0.2605, 1.6288, -0.0327, -0.2605, 1.6288, 0.0327, -0.2605, 1.6288, -0.0327, 0, 1.6806, 0.0327, -0.2605, 1.6288, 0.0327, -0.2605, 1.6288, -0.0327, 0, 1.6806, -0.0327, 0, 1.6806, 0.0327, -0.2605, 1.6288, -0.0327, 0.2605, 1.6288, -0.0327, 0, 1.6806, -0.0327, 0.2605, 1.6288, -0.0327, 0.6288, 1.2605, -0.0327, 0.4813, 1.4813, -0.0327, 0.6288, 1.2605, -0.0327, 0.6288, 0.7395, -0.0327, 0.6806, 1, -0.0327, 0.6288, 0.7395, -0.0327, 0.2605, 0.3712, -0.0327, 0.4813, 0.5187, -0.0327, 0.2605, 0.3712, -0.0327, -0.2605, 0.3712, -0.0327, 0, 0.3194, -0.0327, -0.2605, 0.3712, -0.0327, -0.6288, 0.7395, -0.0327, -0.4813, 0.5187, -0.0327, -0.6288, 0.7395, -0.0327, -0.6288, 1.2605, -0.0327, -0.6806, 1, -0.0327, -0.6288, 1.2605, -0.0327, -0.2605, 1.6288, -0.0327, -0.4813, 1.4813, -0.0327, -0.2605, 1.6288, -0.0327, 0.6288, 1.2605, -0.0327, 0.2605, 1.6288, -0.0327, 0.6288, 1.2605, -0.0327, 0.2605, 0.3712, -0.0327, 0.6288, 0.7395, -0.0327, 0.2605, 0.3712, -0.0327, -0.6288, 0.7395, -0.0327, -0.2605, 0.3712, -0.0327, -0.6288, 0.7395, -0.0327, -0.2605, 1.6288, -0.0327, -0.6288, 1.2605, -0.0327, -0.2605, 1.6288, -0.0327, 0.2605, 0.3712, -0.0327, 0.6288, 1.2605, -0.0327, 0.2605, 0.3712, -0.0327, -0.2605, 1.6288, -0.0327, -0.6288, 0.7395, -0.0327, -0.4625, 1.25, -0.01, -0.4875, 1.25, 0.01, -0.4625, 1.25, 0.01, -0.4625, 1.25, -0.01, -0.4875, 1.25, -0.01, -0.4875, 1.25, 0.01, 0, 1.6806, -0.0327, -0.2605, 1.6288, 0.0327, -0.2605, 1.6288, -0.0327, 0, 1.6806, -0.0327, 0, 1.6806, 0.0327, -0.2605, 1.6288, 0.0327, -0.2605, 1.6288, -0.0327, -0.4813, 1.4813, 0.0327, -0.4813, 1.4813, -0.0327, -0.2605, 1.6288, -0.0327, -0.2605, 1.6288, 0.0327, -0.4813, 1.4813, 0.0327, -0.4813, 1.4813, -0.0327, -0.6288, 1.2605, 0.0327, -0.6288, 1.2605, -0.0327, -0.4813, 1.4813, -0.0327, -0.4813, 1.4813, 0.0327, -0.6288, 1.2605, 0.0327, -0.6288, 1.2605, -0.0327, -0.6806, 1, 0.0327, -0.6806, 1, -0.0327, -0.6288, 1.2605, -0.0327, -0.6288, 1.2605, 0.0327, -0.6806, 1, 0.0327, -0.6806, 1, -0.0327, -0.6288, 0.7395, 0.0327, -0.6288, 0.7395, -0.0327, -0.6806, 1, -0.0327, -0.6806, 1, 0.0327, -0.6288, 0.7395, 0.0327, -0.6288, 0.7395, -0.0327, -0.4813, 0.5187, 0.0327, -0.4813, 0.5187, -0.0327, -0.6288, 0.7395, -0.0327, -0.6288, 0.7395, 0.0327, -0.4813, 0.5187, 0.0327, -0.4813, 0.5187, -0.0327, -0.2605, 0.3712, 0.0327, -0.2605, 0.3712, -0.0327, -0.4813, 0.5187, -0.0327, -0.4813, 0.5187, 0.0327, -0.2605, 0.3712, 0.0327, -0.2605, 0.3712, -0.0327, 0, 0.3194, 0.0327, 0, 0.3194, -0.0327, -0.2605, 0.3712, -0.0327, -0.2605, 0.3712, 0.0327, 0, 0.3194, 0.0327, 0, 0.3194, -0.0327, 0.2605, 0.3712, 0.0327, 0.2605, 0.3712, -0.0327, 0, 0.3194, -0.0327, 0, 0.3194, 0.0327, 0.2605, 0.3712, 0.0327, 0.2605, 0.3712, -0.0327, 0.4813, 0.5187, 0.0327, 0.4813, 0.5187, -0.0327, 0.2605, 0.3712, -0.0327, 0.2605, 0.3712, 0.0327, 0.4813, 0.5187, 0.0327, 0.4813, 0.5187, -0.0327, 0.6288, 0.7395, 0.0327, 0.6288, 0.7395, -0.0327, 0.4813, 0.5187, -0.0327, 0.4813, 0.5187, 0.0327, 0.6288, 0.7395, 0.0327, 0.6288, 0.7395, -0.0327, 0.6806, 1, 0.0327, 0.6806, 1, -0.0327, 0.6288, 0.7395, -0.0327, 0.6288, 0.7395, 0.0327, 0.6806, 1, 0.0327, 0.6806, 1, -0.0327, 0.6288, 1.2605, 0.0327, 0.6288, 1.2605, -0.0327, 0.6806, 1, -0.0327, 0.6806, 1, 0.0327, 0.6288, 1.2605, 0.0327, 0.6288, 1.2605, -0.0327, 0.4813, 1.4813, 0.0327, 0.4813, 1.4813, -0.0327, 0.6288, 1.2605, -0.0327, 0.6288, 1.2605, 0.0327, 0.4813, 1.4813, 0.0327, 0, 1.6806, 0.0327, -0.4813, 1.4813, 0.0327, -0.2605, 1.6288, 0.0327, -0.4813, 1.4813, 0.0327, -0.6806, 1, 0.0327, -0.6288, 1.2605, 0.0327, -0.6806, 1, 0.0327, -0.4813, 0.5187, 0.0327, -0.6288, 0.7395, 0.0327, -0.4813, 0.5187, 0.0327, 0, 0.3194, 0.0327, -0.2605, 0.3712, 0.0327, 0, 0.3194, 0.0327, 0.4813, 0.5187, 0.0327, 0.2605, 0.3712, 0.0327, 0.4813, 0.5187, 0.0327, 0.6806, 1, 0.0327, 0.6288, 0.7395, 0.0327, 0.6806, 1, 0.0327, 0.4813, 1.4813, 0.0327, 0.6288, 1.2605, 0.0327, 0.4813, 1.4813, 0.0327, 0, 1.6806, 0.0327, 0.2605, 1.6288, 0.0327, 0, 1.6806, 0.0327, -0.6806, 1, 0.0327, -0.4813, 1.4813, 0.0327, -0.6806, 1, 0.0327, 0, 0.3194, 0.0327, -0.4813, 0.5187, 0.0327, 0, 0.3194, 0.0327, 0.6806, 1, 0.0327, 0.4813, 0.5187, 0.0327, 0.6806, 1, 0.0327, 0, 1.6806, 0.0327, 0.4813, 1.4813, 0.0327, 0, 1.6806, 0.0327, 0, 0.3194, 0.0327, -0.6806, 1, 0.0327, 0, 0.3194, 0.0327, 0, 1.6806, 0.0327, 0.6806, 1, 0.0327, 0.4813, 1.4813, -0.0327, 0.2605, 1.6288, 0.0327, 0.2605, 1.6288, -0.0327, 0.4813, 1.4813, -0.0327, 0.4813, 1.4813, 0.0327, 0.2605, 1.6288, 0.0327, 0.2605, 1.6288, -0.0327, 0, 1.6806, 0.0327, 0, 1.6806, -0.0327, 0.2605, 1.6288, -0.0327, 0.2605, 1.6288, 0.0327, 0, 1.6806, 0.0327, -0.2605, 1.6288, -0.0327, 0.2605, 1.6288, -0.0327, 0, 1.6806, -0.0327, 0.2605, 1.6288, -0.0327, 0.6288, 1.2605, -0.0327, 0.4813, 1.4813, -0.0327, 0.6288, 1.2605, -0.0327, 0.6288, 0.7395, -0.0327, 0.6806, 1, -0.0327, 0.6288, 0.7395, -0.0327, 0.2605, 0.3712, -0.0327, 0.4813, 0.5187, -0.0327, 0.2605, 0.3712, -0.0327, -0.2605, 0.3712, -0.0327, 0, 0.3194, -0.0327, -0.2605, 0.3712, -0.0327, -0.6288, 0.7395, -0.0327, -0.4813, 0.5187, -0.0327, -0.6288, 0.7395, -0.0327, -0.6288, 1.2605, -0.0327, -0.6806, 1, -0.0327, -0.6288, 1.2605, -0.0327, -0.2605, 1.6288, -0.0327, -0.4813, 1.4813, -0.0327, -0.2605, 1.6288, -0.0327, 0.6288, 1.2605, -0.0327, 0.2605, 1.6288, -0.0327, 0.6288, 1.2605, -0.0327, 0.2605, 0.3712, -0.0327, 0.6288, 0.7395, -0.0327, 0.2605, 0.3712, -0.0327, -0.6288, 0.7395, -0.0327, -0.2605, 0.3712, -0.0327, -0.6288, 0.7395, -0.0327, -0.2605, 1.6288, -0.0327, -0.6288, 1.2605, -0.0327, -0.2605, 1.6288, -0.0327, 0.2605, 0.3712, -0.0327, 0.6288, 1.2605, -0.0327, 0.2605, 0.3712, -0.0327, -0.2605, 1.6288, -0.0327, -0.6288, 0.7395, -0.0327)

[sub_resource type="BoxShape3D" id="BoxShape3D_86ke3"]
size = Vector3(5, 4, 5)

[node name="Gong" type="Node3D"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
script = ExtResource("1_11me6")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_snduv")

[node name="gong" parent="." instance=ExtResource("1_nd6la")]

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_86ke3")

[node name="GongTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0

[node name="ReinforcementTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 15.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="GongTimer" to="." method="_on_gong_timer_timeout"]
[connection signal="timeout" from="ReinforcementTimer" to="." method="_on_reinforcement_timer_timeout"]

[editable path="gong"]
